tests/fixtures/invalid/tuple_float.py
# Cannot call tuple() with Float
x = tuple(1.0)
